rnsc/tests/snapshots/error-parser-outside_class_directive-before_class_dir-only_newline.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----



; only a comment, no class at all
----- STDERR -----
[E-006] Error: file contains no class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/before_class_dir/only_newline.rns:6:2 ]
   │
 1 │ 
   │ │ 
   │ ╰─ expected a '.class' directive
   │ 
   │ Help: Make sure the file contains a valid class definition.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-006
───╯
----- HASH -----
not generated
